[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "rusty-share"
version = "0.1.0"
edition = "2018"

[dependencies]
async-stream = "0.3"
axum = { version = "0.1", git = "https://github.com/tokio-rs/axum" }
bytes = "1.0"
bytesize = "1.0"
chrono = { version = "0.4", default-features = false }
chrono-humanize = "0.2"
futures-util = { version = "0.3", default-features = false }
futures-executor = { version = "0.3", default-features = false, features = [
    "std",
] }
headers = "0.3"
hex = "0.4"
horrorshow = { version = "0.8", default-features = false, features = ["alloc"] }
http = "0.2"
http-serve = "0.3"
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "server",
    "stream",
    "tcp",
] }
log = "0.4"
mime_guess = "2.0"
os_str_bytes = "3.1"
percent-encoding = "2.1"
pico-args = "0.4"
pretty_env_logger = "0.4"
rayon = "1.5"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rand_core = { version = "0.6.2", features = ["getrandom"] }
rusqlite = "0.25"
scrypt = { version = "0.7" }
tar = { version = "0.4", default-features = false }
tokio = { version = "1.6", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
] }
url = "2.2"
walkdir = "2.3"
tracing-subscriber = "0.2.19"
tower-http = { version = "0.1", features = ["trace"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["bundled-windows"]

bundled-sqlite = ["rusqlite/bundled"]
bundled-windows = ["rusqlite/bundled-windows"]
